Fixed number alignment in image type map filter

--- a/packages/scandipwa/src/component/ProductAttributeValue/ProductAttributeValue.style.scss
+++ b/packages/scandipwa/src/component/ProductAttributeValue/ProductAttributeValue.style.scss
@@ -234,6 +234,7 @@
         img {
             width: 32px;
             object-fit: contain;
+            vertical-align: middle;
         }
     }
 
